Move strings to strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">RedKey</string>
+    <string name="step_one">Step 1</string>
+    <string name="step_two">Step 2</string>
+    <string name="select_redkey">Select RedKey in Language &amp; Input settings</string>
+    <string name="enable">Enable</string>
+    <string name="default_keyboard">Select RedKey as your default keyboard</string>
+    <string name="input_method">Select input method</string>
+    <string name="setup_finished">Setup finished</string>
+    <string name="move_on">You can move on to settings</string>
+    <string name="done">Done</string>
 </resources>
